# p4reader

./: README.md  pyproject.toml
examples/: inspect_p4.py  read_fields.py  read_structure.py  simple_plot.py
src/p4reader/: #particles.py#  __init__.py  __init__.py~  inspect.py  p4reader.py
src/p4reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/p4reader/tests/: test_p4reader.py
