[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p4reader"
version = "0.1.0"
description = "Reader for Chicago P4 field, scalar, and particle dump files"
authors = [
    { name = "Stephen Swanekamp" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
